Integrated tailwind css 3.4.4; Fixed materail + tailwindind mat form field issue; added aligning style rule to material-symbols

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+// Style to fix the weird border with angular material
+.mdc-notched-outline__notch {
+    border-right: none !important;
+}
 
 // Material Symbols
 .material-symbols-rounded {
+  vertical-align: middle;
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
